# Marco

./: Cargo.toml  README.md  START_HERE.txt  marco-linux.code-workspace
.github/workflows/: release.yml
changelog/: marco.md  polo.md
documentation/showcase/: 19_parser_optimizations.md
marco/: Cargo.toml
marco-shared/: Cargo.toml
marco-shared/src/: lib.rs
marco-shared/src/assets/language/: de.toml  en.toml  hu.toml  language_matrix.md
marco-shared/src/cache/: cached.rs  file.rs  mod.rs  parser.rs  section.rs  stats.rs
marco-shared/src/logic/: buffer.rs  file_logger.rs  mod.rs  swanson.rs
marco-shared/src/logic/loaders/: icon_loader.rs
marco-shared/src/paths/: core.rs
marco/src/: lib.rs  main.rs  menu.rs  toolbar.rs
marco/src/components/editor/: debounce.rs  footer.rs  hover_provider.rs  scroll_sync.rs  ui.rs  utilities.rs
marco/src/components/language/: default_translations.rs  mod.rs
marco/src/components/search/: engine.rs  navigation.rs  state.rs
marco/src/components/viewer/: allocation_wait.rs  backend.rs  code_view_html.rs  export_pipeline.rs  find_backend.rs  javascript.rs  loading_overlay.rs  mod.rs  preview_state.rs  renderer.rs  webkit6.rs  wry.rs  wry_detached_window.rs  wry_find.rs  wry_platform_webview.rs
marco/src/logic/: logger_init.rs  panic_hook.rs  signal_handlers.rs
marco/src/ui/: toc_panel.rs
marco/src/ui/dialogs/: admonition.rs  diagnostics_reference.rs  export.rs  export_complete.rs  lists.rs  math.rs  mention.rs  mermaid.rs  mod.rs  open_local_file.rs  search.rs  sliderdeck.rs  tables.rs  tabs.rs
marco/src/ui/menu_items/: about.rs  file_operations.rs  modules.rs
marco/src/ui/settings/tabs/: debug.rs
marco/src/ui/toolbar/: emoji.rs
polo/: Cargo.toml
polo/src/: main.rs
polo/src/components/: dialog.rs  menu.rs  mod.rs  toc_panel.rs  toolbar.rs
polo/src/components/css/: constants.rs  menu_and_toolbar.rs  mod.rs
polo/src/components/viewer/: loading_overlay.rs  mod.rs  platform_webview.rs  rendering.rs
