[workspace]
resolver = "3"
members = ["marco", "polo", "marco-shared"]

# `marco-core` is its own published crate (https://crates.io/crates/marco-core)
# and lives in its own repository. Pull it from crates.io with a single shared
# version so all workspace members stay in sync.
[workspace.dependencies.marco-core]
version = "1.1.0"

# Shared workspace dependencies
[workspace.dependencies]
# Serialization
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1"
log = "0.4.29"
chrono = { version = "0.4.43", features = ["serde"] }
tempfile = "3.25.0"
emojis = "0.8.0"
fontconfig = "0.10.0"
dirs = "6.0.0"
htmlescape = "0.3.1"                              # HTML entity encoding/decoding
syntect = "5.3.0"                    # Syntax highlighting (used by marco for theme CSS export)
katex-rs = "0.2.3"                   # Pure Rust KaTeX math rendering (used by marco math dialog)

# UI dependencies (GTK4 ecosystem)
gtk4 = "0.11.2"
glib = "0.22.5"
glib-unix = "0.22.0"
gio = "0.22.5"
sourceview5 = "0.11.0"
dark-light = "2.0.0"
librsvg = "2"
cairo-rs = "0.22.0"
gdk-pixbuf = "0.22.0"

# Platform-specific WebView dependencies
# Linux: webkit6 (GTK4-native WebKit)
webkit6 = "0.6.1"
# Windows: wry (cross-platform WebView wrapper)
wry = { version = "0.55.0", default-features = false, features = ["os-webview", "protocol"] }
tao = "0.35.0"
gdk4-win32 = "0.11.0"
raw-window-handle = "0.6.2"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }

# Test dependencies
clap = { version = "4.5.58", features = ["derive"] }
serial_test = "3.3.1"

# Profile optimizations
[profile.dev]
opt-level = 0           # No optimization for fastest compilation
debug = true            # Full debug info
incremental = true      # Enable incremental compilation
overflow-checks = true  # Safety checks in dev
split-debuginfo = 'unpacked'  # Faster linking on Windows/macOS

[profile.release]
opt-level = 3           # Maximum optimization
debug = false           # No debug symbols
lto = "thin"            # Thin LTO - faster than "fat" LTO with good optimization
codegen-units = 16      # Parallel codegen - much faster than 1
strip = true            # Strip symbols to reduce binary size
panic = 'abort'         # Smaller binaries, no unwinding

# CI on Ubuntu 24.04 can fail to compile `ashpd 0.10.x` (pulled in by
# `dark-light 2.0.0`) due to stricter trait bounds in newer `zbus`/`zvariant`.
# Upstream `dark-light` has already removed the `ashpd` dependency on its main
# branch, but hasn't published a new crates.io release yet.
#
# To keep CI reproducible while we wait for an upstream release, we patch
# `dark-light` to a pinned git revision.
[patch.crates-io]
dark-light = { git = "https://github.com/rust-dark-light/dark-light", rev = "0f18d2fbcaa5d1c175db8aae7d53428988d7e961" }
