[package]
name = "marco"
version = "0.24.0"
edition = "2021"
authors = ["Kim Skov Rasmussen"]
description = "Marco - A Markdown Composer"
license = "MIT"
default-run = "marco"
rust-version = "1.94.1"

[lib]
# The `marco` crate is GTK/UI heavy; most docs contain illustrative snippets that
# are not meant to compile or run as doctests.
doctest = false

[features]
default = []

[[bin]]
name = "marco"
path = "src/main.rs"

[dependencies]
# Core library (published on crates.io)
marco-core = { workspace = true }
marco-shared = { path = "../marco-shared" }

# Utilities
log = { workspace = true }
syntect = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
katex-rs = { workspace = true }
htmlescape = { workspace = true }

# UI dependencies (common)
gtk4 = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
sourceview5 = { workspace = true }
dark-light = { workspace = true }
# SVG rendering and Cairo required for high-quality window control icons
librsvg = { workspace = true }
cairo-rs = { workspace = true }
# Temp files for detached preview handling
tempfile = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
webkit6 = { workspace = true }
glib-unix = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
wry = { workspace = true }
tao = { workspace = true }
gdk4-win32 = { workspace = true }
raw-window-handle = { workspace = true }
# Ctrl-C handler for graceful shutdown on Windows
ctrlc = { version = "3.5.1", default-features = false, features = ["termination"] }
# Native Windows file dialogs
rfd = "0.17.2"
# Native WebView2 PDF export (PrintToPdf via ICoreWebView2_7).
# webview2-com / windows / windows-core are already transitively pulled in by
# `wry`, but we depend on them directly so the unsafe COM call sites in
# `wry_platform_webview` can use the same versions wry uses (wry 0.55 → 0.38.2).
webview2-com = "0.38.2"
windows = { version = "0.61", features = ["Win32_Foundation"] }
windows-core = "0.61"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0"

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }
