[package]
name = "polo"
version = "0.24.0"
edition = "2021"
authors = ["Kim Skov Rasmussen"]
description = "Polo - Markdown Viewer"
license = "MIT"
rust-version = "1.94.1"

[dependencies]
# Core library (published on crates.io)
marco-core = { workspace = true }
marco-shared = { path = "../marco-shared" }

# Utilities
log = { workspace = true }

# UI dependencies (common)
gtk4 = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
librsvg = { workspace = true }
cairo-rs = { workspace = true }
gdk-pixbuf = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
webkit6 = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
wry = { workspace = true }
tao = { workspace = true }
gdk4-win32 = { workspace = true }
raw-window-handle = { workspace = true }
rfd = "0.17.2"
# Native WebView2 system print dialog (ICoreWebView2_16::ShowPrintUI).
# Same versions as marco; transitively pulled in by wry already.
webview2-com = "0.38.2"
windows = { version = "0.61", features = ["Win32_Foundation"] }
windows-core = "0.61"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"